--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@formkit/auto-animate": "^0.9.0",
     "axios": "^1.12.2",
+    "lodash.debounce": "^4.0.8",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
